--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -22,9 +22,22 @@
 
   <style>
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+    /* css变量 */
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+
+    img {
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+      background: var(--base);
+    }
+
+    .hl {
+      color: var(--base);
+    }
 
     body {
       text-align: center;
@@ -45,6 +58,15 @@
   </style>
 
   <script>
+    // 修改css变量
+    function handleChange() {
+      const suffix = this.dataset.sizing || '';
+      // 通过document.documentElement获取根节点
+      // 通过style.setProperty更改css变量
+      document.documentElement.style.setProperty(`--${this.name}`, this.value+suffix);
+    }
+    const elements = document.querySelectorAll('.controls input');
+    elements.forEach(key => key.addEventListener('change', handleChange));
   </script>
 
 </body>
