--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Type Ahead 👀</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </head>
 <body>
 
@@ -16,6 +18,56 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+
+const cities = [];
+
+// Make a request for a user with a given ID
+axios.get(endpoint)
+  .then(function (response) {
+    // handle success
+    console.log('res',response);
+    cities.push(...response.data);
+    // console.table(cities);
+  })
+  .catch(function (error) {
+    // handle error
+    console.log(error);
+  })
+  .then(function () {
+    // always executed
+  });
+
+let searchBox = document.querySelector(".search");
+let suggestions = document.querySelector(".suggestions");
+searchBox.addEventListener("change", showResult);  
+
+function showResult() {
+  //获取搜索框的字符
+  const input = this.value;
+  console.log('input',input);
+
+  //用filter匹配符合的城市
+  const resultList = cities.filter(item => 
+    item.city.includes(input) || item.state.includes(input)
+  );
+  console.table(resultList);
+
+  //修改dom，展示结果
+  const dom = resultList.map(item => {
+    const city = item.city;
+    const state = item.state;
+
+    return `
+      <li>
+          <span class="name">${city},${state}</span>
+      </li>
+    `;
+
+  }).join('');
+
+  suggestions.innerHTML = dom;
+
+}
 
 </script>
 </body>
