--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -182,6 +182,21 @@
     </li>
   </ul>
 <script>
+  //计算总计几分钟
+  let nodeArray = Array.from(document.querySelectorAll(".videos li"));
+  let timeArray = nodeArray.map(item => item.dataset.time);
+  let seconds = 0;
+  timeArray.forEach(time => {
+    let pair = time.split(":");
+    seconds = seconds + Number(pair[0])*60 + Number(pair[1]);
+  })
+  console.log("seconds:", seconds);
+  const hours = Math.floor(seconds/3600);
+  seconds -= hours * 3600;
+  const minutes = Math.floor(seconds/60);
+  seconds -= minutes * 60;
+  
+  console.log(hours, minutes, seconds);
 </script>
 </body>
 </html>
