--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,21 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    console.log("is at least one person 19 or older?", people.some(person => {return 2021-person.year >= 19}));
     // Array.prototype.every() // is everyone 19 or older?
+    console.log("is everyone 19 or older?", people.every(person => {return 2021-person.year >= 19}));
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    console.log("find the comment with the ID of 823423", comments.find(item => item.id===823423));
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    let targetIndex = comments.findIndex(item => item.id===823423);
     // delete the comment with the ID of 823423
+    comments.splice(targetIndex,1);
+    console.table(comments);
 
   </script>
 </body>
